---------------------------------------------------------------------------------------------------
Version: 4.0.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 4.0.0
Date: 2020-11-23
  Changes:
    - Updated for Factorio 1.1
---------------------------------------------------------------------------------------------------
Version: 3.0.1
Date: 26. 01. 2020
  Changes:
    - Updated for Factorio 0.18
---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 27. 01. 2020
  Bugfixes:
    - Fixed that artillery wagons where minable
    - Fixed that vehicles created by script stayed minable
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 01. 05. 2019
  Changes:
    - Updated for Factorio 0.17.35
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 27. 02. 2019
  Changes:
    - Updated for Factorio 0.17
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 14. 12. 2017
  Changes:
    - Updated for Factorio 0.16