@@ -3,6 +3,7 @@
   "version": "4.0.1",
   "title": "Uncle Shred's unminable vehicles",
   "author": "Choumiko",
+  "contact": "Discord: Choumiko#6179",
   "homepage": "https://github.com/Choumiko/UnminableVehicles",
   "description": "Makes vehicles unminable or teleports players to spawn after mining/rotating a vehicle.\nTeleported players can't move until they are killed",
   "factorio_version": "1.1"
