@@ -3,8 +3,10 @@ unminable_vehicles_make_unminable=Make vehicles unminable
 unminable_vehicles_teleport_players=Teleport players to spawn
 unminable_vehicles_prevent_rotation=Prevent vehicle rotation
 unminable_vehicles_allow_shooting=Allow shooting
+unminable_vehicles_mine_ingredients=Mining returns ingredients
 [mod-setting-description]
 unminable_vehicles_make_unminable=Prevent cars, tanks, locomotives and wagons from being mined.
 unminable_vehicles_prevent_rotation=Disables rotating single locomotives. Will teleport players if setting is active.
 unminable_vehicles_teleport_players=Teleports players to spawn after they mined a vehicle.\nNo effect when vehicles are not minable.
 unminable_vehicles_allow_shooting=Allow players to shoot after they are teleported.
+unminable_vehicles_mine_ingredients=Mining a vehicle returns x * ingredients\nSet to 0 to disable.\nNo effect when vehicles are not minable.
